welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:6: error: type mismatch;
 found   : Unit
 required: Boolean
	for (n <- 0 to 3)
               ^arrayFront9:14: error: type mismatch;
 found   : Unit
 required: Boolean
	for (n <- 0 to nums.length-1)
               ^